mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_break_outside_loop.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot use 'break' outside of a loop
--> test_scripts/error_cases/parser_break_outside_loop.mux:2:6
   |
 2 | break
   |      ^
   |
= help: 'break' can only be used inside a 'for' or 'while' loop
